[package]
name = "rust_arrow_playground"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
tokio = "1.8.2"
tokio-stream = "0.1"
async-trait = "0.1"
futures-util = { version = "0.3.1" }
datafusion = { path = "/Users/alamb/Software/arrow-datafusion/datafusion", default-features = false }
once_cell = "1.8.0"
rand = "0.8"