[package]
name = "datafusion_aggregate_bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.8.2"
tokio-stream = "0.1"
async-trait = "0.1"
futures-util = { version = "0.3.1" }
datafusion = { git = "https://github.com/apache/arrow-datafusion", branch = "master" }
#datafusion = { git = "https://github.com/alamb/arrow-datafusion", branch = "alamb/gby_null_new" }
rand = "0.8"